Tried CSS fix for bg img on mobile

--- a/index.css
+++ b/index.css
@@ -16,6 +16,16 @@ body, html {
   background-size: cover;
   background-image: url("images/compressbambooforest.jpg");
   min-height: 100%;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+
+/* Then tablets, laptops and desktops (768px and up) */
+@media screen and (min-width:768px) {
+  body{
+    background-image: url("images/compressbambooforest.jpg");
+    background-size: cover;
+    }
 }
 
 .w3-bar .w3-button {
